--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -8,16 +8,29 @@
 }
 
 @inproceedings{artofxen,
-  author =       { Paul Barham and Boris Dragovic and Keir Fraser and Steven Hand and et al},
-  title =        { Xen and the art of virtualization},
-  month= {10},
-  year =         {2003},
-  modifydate =         {2003-10-19},
-  TypeofLit =    {C/OL},
-  journal = {Proceedings of the Nineteenth ACM Symposium on Operating Systems Principles},
-  url =          {http://doi.acm.org/10.1145/945445.945462},
+  author    = {Paul Barham and
+               Boris Dragovic and
+               Keir Fraser and
+               Steven Hand and
+               Tim Harris and
+               Alex Ho and
+               Rolf Neugebauer and
+               Ian Pratt and
+               Andrew Warfield},
+  editor    = {Michael L. Scott and
+               Larry L. Peterson},
+  title     = {Xen and the art of virtualization},
+  booktitle = {Proceedings of the 19th {ACM} Symposium on Operating Systems Principles
+               2003, {SOSP} 2003, Bolton Landing, NY, USA, October 19-22, 2003},
+  pages     = {164--177},
   address = {Bolton Landing, NY, USA},
-  language = {en}
+  publisher = {{ACM}},
+  year      = {2003},
+  url       = {https://doi.org/10.1145/945445.945462},
+  doi       = {10.1145/945445.945462},
+  timestamp = {Tue, 06 Nov 2018 16:59:32 +0100},
+  biburl    = {https://dblp.org/rec/conf/sosp/BarhamDFHHHN03.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{intelv,
@@ -61,6 +74,7 @@
   booktitle = {{VEE} '20: 16th {ACM} {SIGPLAN/SIGOPS} International Conference on
                Virtual Execution Environments, virtual event [Lausanne, Switzerland],
                March 17, 2020},
+  address = {Lausanne, Switzerland},
   pages     = {30--44},
   publisher = {{ACM}},
   year      = {2020},
@@ -113,6 +127,7 @@
   booktitle = {2nd Symposium on Networked Systems Design and Implementation {(NSDI}
                2005), May 2-4, 2005, Boston, Massachusetts, USA, Proceedings},
   publisher = {{USENIX}},
+  address = {Boston, Massachusetts, USA},
   year      = {2005},
   url       = {http://www.usenix.org/events/nsdi05/tech/clark.html},
   timestamp = {Wed, 04 Jul 2018 13:06:34 +0200},
@@ -136,6 +151,7 @@
   booktitle = {Proceedings of the 8th {USENIX} Symposium on Networked Systems Design
                and Implementation, {NSDI} 2011, Boston, MA, USA, March 30 - April
                1, 2011},
+      address= { Boston, MA, USA },
   publisher = {{USENIX} Association},
   year      = {2011},
   url       = {https://www.usenix.org/conference/nsdi11/mesos-platform-fine-grained-resource-sharing-data-center},
@@ -156,6 +172,7 @@
   title     = {Omega: flexible, scalable schedulers for large compute clusters},
   booktitle = {Eighth Eurosys Conference 2013, EuroSys '13, Prague, Czech Republic,
                April 14-17, 2013},
+               address={Prague, Czech Republic},
   pages     = {351--364},
   publisher = {{ACM}},
   year      = {2013},
@@ -177,6 +194,7 @@
   booktitle = {{ACM} {SIGOPS} 24th Symposium on Operating Systems Principles, {SOSP}
                '13, Farmington, PA, USA, November 3-6, 2013},
   pages     = {69--84},
+  address = {Farmington, PA, USA},
   publisher = {{ACM}},
   year      = {2013},
   url       = {https://doi.org/10.1145/2517349.2522716},
@@ -204,7 +222,8 @@
   url       = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/grandl\_graphene},
   timestamp = {Tue, 29 Jan 2019 17:35:36 +0100},
   biburl    = {https://dblp.org/rec/conf/osdi/GrandlKRAK16.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  address = {Savannah, GA, USA}
 }
 
 @phdthesis{highperf,
@@ -347,6 +366,7 @@
   title     = {MapReduce: Simplified Data Processing on Large Clusters},
   booktitle = {6th Symposium on Operating System Design and Implementation {(OSDI}
                2004), San Francisco, California, USA, December 6-8, 2004},
+  address = {San Francisco, California, USA},
   pages     = {137--150},
   publisher = {{USENIX} Association},
   year      = {2004},
@@ -404,6 +424,7 @@
                2009, {SOSP} 2009, Big Sky, Montana, USA, October 11-14, 2009},
   pages     = {29--44},
   publisher = {{ACM}},
+  address = {Big Sky, Montana, USA},
   year      = {2009},
   url       = {https://doi.org/10.1145/1629575.1629579},
   doi       = {10.1145/1629575.1629579},
@@ -428,7 +449,8 @@
   doi       = {10.1145/800217.806619},
   timestamp = {Tue, 06 Nov 2018 16:59:32 +0100},
   biburl    = {https://dblp.org/rec/conf/sosp/PresottoM83.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  address = {Bretton Woods, New Hampshire, USA}
 }
 
 @inproceedings{Voyager,
@@ -442,6 +464,7 @@
   booktitle = {37th {IEEE} International Conference on Distributed Computing Systems,
                {ICDCS} 2017, Atlanta, GA, USA, June 5-8, 2017},
   pages     = {2137--2142},
+  address = {Atlanta, GA, USA},
   publisher = {{IEEE} Computer Society},
   year      = {2017},
   url       = {https://doi.org/10.1109/ICDCS.2017.91},
@@ -464,6 +487,7 @@
   booktitle = {{ACM} {SIGPLAN/SIGOPS} International Conference on Virtual Execution
                Environments (co-located with {ASPLOS} 2013), {VEE} '13, Houston,
                TX, USA, March 16-17, 2013},
+  address = {Houston, TX, USA},
   pages     = {85--96},
   publisher = {{ACM}},
   year      = {2013},
@@ -486,6 +510,7 @@
   booktitle = {Proceedings of the 7th International Conference on Virtual Execution
                Environments, {VEE} 2011, Newport Beach, CA, USA, March 9-11, 2011
                (co-located with {ASPLOS} 2011)},
+  address = {Newport Beach, CA, USA},
   pages     = {111--120},
   publisher = {{ACM}},
   year      = {2011},
@@ -511,6 +536,7 @@
                EuroSys 2015, Bordeaux, France, April 21-24, 2015},
   pages     = {18:1--18:17},
   publisher = {{ACM}},
+  address = {Bordeaux, France},
   year      = {2015},
   url       = {https://doi.org/10.1145/2741948.2741964},
   doi       = {10.1145/2741948.2741964},
