--- a/sjtuthesis.cls
+++ b/sjtuthesis.cls
@@ -701,19 +701,27 @@
 \newenvironment{symbolnote}{\chapter{\sjtu@label@symbolnote}
 }{}
 
-
-\newenvironment{bigabstract}{%
-  \cleardoublepage
-  \pagestyle{fancy}
-  \chapter*{%
-    \bfseries
-    \MakeUppercase\sjtu@value@englishtitle
-    \vskip 20pt
-  }
-  \setcounter{page}{1}
-  \pageref{biglast}
+\newenvironment{bigabstract}
+{
+\setcounter{page}{1}
+\fancypagestyle{biglast}{
+  \fancyhf{}
+  \fancyhead[L]{\includegraphics{figure/sjtubanner-2.pdf}}
+  \fancyhead[R]{\parbox[b]{\markboxwidth}{\raggedleft\nouppercase{\sjtu@fancyhead\sjtu@value@titlemark}}}
+  \fancyfoot[C]{\sjtu@fancyfoot{\pageref{biglast}}}
+  \renewcommand{\headheight}{32pt}
 }
 
+\fancypagestyle{plain}{% 设置开章页页眉页脚风格(只有页码作为页脚)
+  \fancyhf{}
+  \fancyhead[L]{\includegraphics{figure/sjtubanner-2.pdf}}
+  \fancyhead[R]{\parbox[b]{\markboxwidth}{\raggedleft\nouppercase{\sjtu@fancyhead\sjtu@value@titlemark}}}
+  \fancyfoot[C]{\sjtu@fancyfoot{\pageref{biglast}}}
+  \renewcommand{\headheight}{32pt}
+}
+
+\chapter*{\bfseries\MakeUppercase{\sjtu@value@englishtitle}\vskip 20pt }
+}
 {\label{biglast}}
 
 \endinput
